# Rocketbox2D

./: .gitmodules  CMakeLists.txt  CREDITS.md  LICENSE  README.md  out.txt
CMake/: FindVulkanHpp.cmake
CoreTest/: CMakeLists.txt  main.cpp
CoreTest/Assets/Shaders/: shader.slang  sprite.slang
Engine/: CMakeLists.txt
Engine/assets/shaders/: quad.slang
Engine/include/Engine/: Engine.h
Engine/include/Engine/Core/: Application.h  Assert.h  Base.h  Engine.h  EntryPoint.h  FileSystem.h  Flags.h  Handle.h  Hash.h  Input.h  Log.h  PlatformDetection.h  ResourceManager.h  ServiceLocator.h  ServiceLocator.inl  StringName.h  StringRegistry.h  Timer.h
Engine/include/Engine/Events/: ApplicationEvent.h  Event.h  EventManager.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Engine/include/Engine/Input/: Input.h  InputAxis.h  InputButton.h  KeyCode.h  MouseButton.h
Engine/include/Engine/Math/: Matrix.h  Vector.h
Engine/include/Engine/Platform/: IGraphicsBridge.h  IPlatform.h  IWindow.h  Platform.h
Engine/include/Engine/RHI/: GraphicsAPI.h  IBuffer.h  ICommandBuffer.h  IGraphicsDevice.h  IPipeline.h  IShader.h  ISwapChain.h  ITexture.h  RHI.h  VertexLayout.h
Engine/include/Engine/Renderer/: Camera.h  IBuffer.h  IGraphicsDevice.h  IPipelineState.h  IShader.h  ITexture.h  Material.h  MaterialInstance.h  Mesh.h  Renderer.h  Renderer2D.h  VertexLayout.h
Engine/include/Engine/Renderer/RHI/: GraphicsAPI.h  IBuffer.h  IGraphicsDevice.h  IPipelineState.h  IShader.h  ITexture.h  IUniformBuffer.h  IVertexArray.h  ShaderLayout.h  UniformBlock.h  VertexLayout.h
Engine/include/Engine/Resources/: IResource.h  IResourceLoader.h  Resource.h  ResourceLoader.h  ResourceManager.h
Engine/include/Engine/Scene/: Components.h  Entity.h  EntityScript.h  Entity_Impl.h  Scene.h  ScriptableEntity.h
Engine/source/Core/: Application.cpp  Engine.cpp  EngineStrings.h  FileSystem.cpp  Input.cpp  Log.cpp  ResourceManager.cpp  ServiceLocator.cpp  StringName.cpp  StringRegistry.cpp  Timer.cpp
Engine/source/Events/: EventManager.cpp
Engine/source/Input/: Input.cpp
Engine/source/Platform/: IGraphicsBridge.cpp  IPlatform.cpp  Platform.cpp
Engine/source/Platform/SDL3/: SDL3Platform.cpp  SDL3Platform.h  SDL3Window.cpp  SDL3Window.h
Engine/source/Platform/SDL3/Vulkan/: SDL3VulkanGraphicsBridge.cpp  SDL3VulkanGraphicsBridge.h
Engine/source/RHI/: IGraphicsDevice.cpp  VertexLayout.cpp
Engine/source/RHI/Vulkan/: IVulkanGraphicsBridge.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandBufferAllocator.cpp  VulkanCommandBufferAllocator.h  VulkanCommandBufferPool.cpp  VulkanCommandBufferPool.h  VulkanCommon.cpp  VulkanCommon.h  VulkanConstants.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorSetAllocator.cpp  VulkanDescriptorSetAllocator.h  VulkanDynamicBuffer.cpp  VulkanDynamicBuffer.h  VulkanDynamicBufferAllocator.cpp  VulkanDynamicBufferAllocator.h  VulkanFrame.cpp  VulkanFrame.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanQueue.h  VulkanResourceData.h  VulkanSwapchain.cpp  VulkanSwapchain.h
Engine/source/RHI/Vulkan/RHI/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h
Engine/source/Renderer/: Camera.cpp  IGraphicsDevice.cpp  Material.cpp  MaterialInstance.cpp  Renderer.cpp  Renderer2D.cpp  VertexLayout.cpp
Engine/source/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.h  OpenGLPipelineState.cpp  OpenGLPipelineState.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/source/Renderer/RHI/: IGraphicsDevice.cpp  IShader.cpp  ShaderLayout.cpp  UniformBlock.cpp  VertexLayout.cpp
Engine/source/Renderer/Vulkan/: IVulkanGraphicsBridge.h  VulkanAllocator.cpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanConstants.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorManager.cpp  VulkanDescriptorManager.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrame.cpp  VulkanFrame.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanPipelineState.cpp  VulkanPipelineState.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h
Engine/source/Renderer/Vulkan/RHI/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanPipelineState.cpp  VulkanPipelineState.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h
Engine/source/Scene/: Entity.cpp  Scene.cpp
EngineTestApp/: CMakeLists.txt  main.cpp
EngineTestApp/Assets/: basic.frag  basic.vert
Rocketbox2D/: CMakeLists.txt  main.cpp
Rocketbox2D/Assets/: basic.frag  basic.vert
VKTestApp/: CMakeLists.txt  main.cpp
VKTestApp/shaders/: test.slang
cmake/: EngineHelpers.cmake  FindVMA.cmake  ScaryVoodooMagic.cmake  bin2h.cmake
tools/: todo.py
